--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <p style="background-image: url('https://static.wikia.nocookie.net/dragonball/images/b/ba/Goku_anime_profile.png/revision/latest?cb=20220825041430');"></p>
+    <p style="background-image: url('background.jpg');"></p>
     <div class="container flex">
         <div class="instagram-page flex">
           <div class="text">
